feat(http): support failover-stable sessions
